tests/fw_rules_tests/policies/label_expr_test_policy6.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-ipblock-to-isolated-by-label-and
  namespace: default
spec:
  podSelector:
    matchExpressions:
      - {key: app, operator: Exists}
      - {key: tier, operator: Exists}
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations

---




apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-default-new
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
